RESOLVED FIXED 62496
REGRESSION (WebKit2): window.showModalDialog() broken
https://bugs.webkit.org/show_bug.cgi?id=62496
Summary REGRESSION (WebKit2): window.showModalDialog() broken
Anders Carlsson
Reported 2011-06-10 19:00:05 PDT
REGRESSION (WebKit2): window.showModalDialog() broken
Attachments
Patch (3.38 KB, patch)
2011-06-10 19:02 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-06-10 19:02:17 PDT
Anders Carlsson
Comment 2 2011-06-10 19:04:36 PDT
Note You need to log in before you can comment on or make changes to this bug.